samples/_failures_safe/1761169059_9fb018_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13371bb7.c: In function ‘main’:
./samples/SAFE/__tmp_13371bb7.c:158:16: error: missing terminating " character
  158 |         printf("\nFilter by level (0-4, -
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_13371bb7.c:158:9: error: expected expression at end of input
  158 |         printf("\nFilter by level (0-4, -
      |         ^~~~~~
./samples/SAFE/__tmp_13371bb7.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13371bb7.c:158:9: error: expected declaration or statement at end of input
